--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -17,9 +17,21 @@ html {
 body {
   color: #545149;
   background-color: #f4f1ec;
+  font-family: "Source Sans Pro", sans-serif;
   font-size: 24px;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+ container {
+  display: flex;
+  color: #545149;
+  background-color:  #f4f1ec;
+  font-family: "Source Sans Pro", sans-serif;
+  width: 90%;
+  justify-content: center;
+  align-items: center;    
+  margin: 0 auto;
+}
