--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -25,13 +25,26 @@ body {
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
- container {
+ .container {
   display: flex;
   color: #545149;
   background-color:  #f4f1ec;
   font-family: "Source Sans Pro", sans-serif;
   width: 90%;
-  justify-content: center;
-  align-items: center;    
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 0 auto;
+}
+
+.container tweeter-tweets {
+  display: flex;
+  color: #545149;
+  border-width: 5rem;
+  border-color: black;
+  background-color:  #f4f1ec;
+  font-family: "Source Sans Pro", sans-serif;
+  width: 90%;
+  flex-direction: column;
+  align-items: flex-start;
   margin: 0 auto;
 }
