--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,6 +1,45 @@
-new-tweet {
+.new-tweet {
+    flex-direction: column;
     display: flex;
-    justify-content: center;
-    width: 100%;
-    margin-top: 1em;
+    background-color: #ececec;
+    border-radius: 5px;
+    border-color: #bdbdbd;
+    border-style: solid;
+    border-width: 1px;
+    padding: 0.5em;
+}
+
+.new-tweet h2 {
+    margin-top: 0;
+    justify-content: flex-start;
+    border-bottom: solid #4a4747 5px;
+}
+
+.new-tweet textarea {
+     width: 90%;
+     justify-content: center;
+     float: left;
+     padding: 10px 20px;
+}
+
+.button {
+    background-color: #4056A1;
+    border: none;
+    color: white;
+    padding: 15px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: flex;
+    justify-content: flex-start;
+    font-family: "Bungee", "Source Sans Pro", sans-serif;
+    font-size: 16px;
+  }
+
+.counter {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.counter-red {
+    color: red;
 }
