--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,10 +1,12 @@
-.container {
+.container tweeter-tweets {
     display: flex;
-    color: #000000;
-    background-color: #FFFFFF;
+    color: #545149;
+    border-width: 5rem;
+    border-color: black;
+    background-color:  #f4f1ec;
     font-family: "Source Sans Pro", sans-serif;
     width: 90%;
-    justify-content: center;
-    align-items: center;    
+    flex-direction: column;
+    align-items: flex-start;
     margin: 0 auto;
-}
+  }
