--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -16,7 +16,8 @@ html {
 
 body {
   color: #545149;
-  background-color: #f4f1ec;
+  background-image: url("../images/washi.png");
+  background-color: rgb(12, 122, 85);
   font-family: "Source Sans Pro", sans-serif;
   font-size: 24px;
 }
@@ -24,14 +25,3 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
-
- .container {
-  display: flex;
-  color: #545149;
-  background-color:  #f4f1ec;
-  font-family: "Source Sans Pro", sans-serif;
-  width: 90%;
-  flex-direction: column;
-  align-items: flex-start;
-  margin: 0 auto;
-}
