--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,7 +1,10 @@
 nav {
     color: #FFFFFF;
-    background-color: #4056A1;
     font-family: "Bungee", "Source Sans Pro", sans-serif;
+    background-image: url("../images/washi.png");
+    background-color: rgb(12, 122, 85);
+    border-bottom: solid;
+    border-color: #f1a922;
     height: 120px;
     padding: 1.5rem;
     display: flex;
@@ -12,3 +15,23 @@ nav {
     top: 0;
     width: 100%;
   }
+
+.website-title {
+    font-size: 45px;
+  }
+
+.subtitle {
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 25px;
+  font-weight: 300;
+  padding-left: 25px;
+}
+
+.write-a-new-tweet{
+  font-family: "Source Sans Pro", sans-serif;
+}
+
+nav a {
+    color: white;
+    text-decoration: none;
+}
