--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -3,6 +3,8 @@
     align-content: center;
     display: flex;
     width: 50%;
+    border: solid white 5px;
+    border-radius: 25px;
     margin: 1em;
     padding: 1em;
 }
@@ -12,22 +14,48 @@ article {
     flex-direction: column;
 }
 
+.tweet:hover {
+    box-shadow: 5px 5px 4px rgb(39, 39, 39);
+}
+
 /* Header stuff */
 
 .tweet-header {
-    
+    color: white;
 }
 
-tweet.author {
+.tweet-author {
     display: flex;
     justify-content: flex-start;
-    font-family: "Bungee";
+    font-family: "Bungee", "Source Sans Pro", sans-serif;
+    font-size: 25px;
+    font-weight: 700;
 }
 
-.tweet.user.name {
-    
+.tweet-handle {
+    display: flex;
+    justify-content: flex-start;
+    font-family: "Source Sans Pro", sans-serif;
+    font-size: 25px;
+    font-weight: 300;
+
 }
 
-.tweet.content {
+.tweet-tweet {
+    color: darkslategrey;
+    font-family: "Source Sans Pro", sans-serif;
+    font-weight: 300;
+    background-color: white;
+    border: solid darkslategrey 5px;
+    border-radius: 25px;
+    padding: 1em;
+}
 
+.tweet-footer {
+    background-color: white;
+    font-family: "Source Sans Pro", sans-serif;
+    font-size: small;
+    border: solid darkslategrey 5px;
+    border-radius: 25px;
+    padding: 10px;
 }
