--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -7,7 +7,13 @@
     display: flex;
     flex-direction: column;
     align-content: center;
-    padding-left: 0em;
+    padding-left: 1em;
+}
+
+.header-tweet-handle {
+    font-family: "Source Sans Pro", sans-serif;
+    font-weight: 300;
+    padding-left: 100px;
 }
 
 .new-tweet {
